[gd_scene load_steps=12 format=2]

[ext_resource path="res://Modules/PauseMenu/NewPauseMenu.gd" type="Script" id=2]

[sub_resource type="DynamicFontData" id=5]
font_path = "res://Resources/Fonts/UbuntuMono-Bold.ttf"

[sub_resource type="DynamicFont" id=6]
size = 60
font_data = SubResource( 5 )

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Resources/Fonts/UbuntuMono-Bold.ttf"

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = SubResource( 1 )

[sub_resource type="DynamicFontData" id=7]
font_path = "res://Resources/Fonts/UbuntuMono-Bold.ttf"

[sub_resource type="DynamicFont" id=8]
size = 30
font_data = SubResource( 7 )

[sub_resource type="DynamicFontData" id=9]
font_path = "res://Resources/Fonts/UbuntuMono-Bold.ttf"

[sub_resource type="DynamicFont" id=10]
size = 30
font_data = SubResource( 9 )

[sub_resource type="DynamicFontData" id=3]
font_path = "res://Resources/Fonts/UbuntuMono-Bold.ttf"

[sub_resource type="DynamicFont" id=4]
size = 30
font_data = SubResource( 3 )

[node name="NewMenu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0392157, 0.0392157, 0.0392157, 0.192157 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 704.0
margin_top = 412.0
margin_right = 1216.0
margin_bottom = 668.0
rect_min_size = Vector2( 512, 256 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 10

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 512.0
margin_bottom = 61.0
custom_fonts/font = SubResource( 6 )
text = "Pause"
align = 1

[node name="ResumeBtn" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 71.0
margin_right = 512.0
margin_bottom = 108.0
custom_fonts/font = SubResource( 2 )
text = "Resume"
icon_align = 1

[node name="SettingsBtn" type="Button" parent="CenterContainer/VBoxContainer"]
visible = false
margin_top = 118.0
margin_right = 512.0
margin_bottom = 155.0
custom_fonts/font = SubResource( 8 )
text = "Settings"

[node name="MenuBtn" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 118.0
margin_right = 512.0
margin_bottom = 155.0
custom_fonts/font = SubResource( 10 )
text = "Back to Menu"

[node name="ExitBtn" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 165.0
margin_right = 512.0
margin_bottom = 202.0
custom_fonts/font = SubResource( 4 )
text = "Exit Game"

[connection signal="pressed" from="CenterContainer/VBoxContainer/ResumeBtn" to="." method="_on_ResumeBtn_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/SettingsBtn" to="." method="_on_SettingsBtn_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/MenuBtn" to="." method="_on_MenuBtn_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/ExitBtn" to="." method="_on_ExitBtn_pressed"]
